@@ -29,6 +29,9 @@
     <dt>DiveSystem</dt><dd><ul>
 	    <li>Orca, iDive DAN, iDive Deep, iDive Easy, iDive Free, iDive Pro, iDive Reb, iDive Stealth, iDive Tech, iDive X3M</li></ul>
     </dd>
+    <dt>Garmin</dt><dd><ul>
+	    <li>Descent Mk1</li></ul>
+    </dd>
     <dt>Genesis</dt><dd><ul>
 	    <li>React Pro, React Pro White</li></ul>
     </dd>
@@ -39,10 +42,10 @@
 	    <li>DG02, DG03, TX1</li></ul>
     </dd>
     <dt>Mares</dt><dd><ul>
-	    <li>Airlab, Darwin, Darwin Air, Icon HD, Icon HD Net Ready, M1, M2, Matrix, Nemo, Nemo Air, Nemo Apneist, Nemo Excel, Nemo Steel, Nemo Titanium, Nemo Wide, Nemo Wide 2, Puck, Puck 2, Puck Air, Puck Pro, Quad, Quad Air, Smart, Smart Apnea</li></ul>
+	    <li>Airlab, Darwin, Darwin Air, Icon HD, Icon HD Net Ready, M1, M2, Matrix, Nemo, Nemo Air, Nemo Apneist, Nemo Excel, Nemo Steel, Nemo Titanium, Nemo Wide, Nemo Wide 2, Puck, Puck 2, Puck Air, Puck Pro, Quad, Quad Air, Smart, Smart Air, Smart Apnea</li></ul>
     </dd>
     <dt>Oceanic</dt><dd><ul>
-	    <li>Atom 1.0, Atom 2.0, Atom 3.0, Atom 3.1, Datamask, F10, F11, Geo, Geo 2.0, OC1, OCS, OCi, Pro Plus 2, Pro Plus 2.1, Pro Plus 3, VT 4.1, VT Pro, VT3, VT4, VTX, Veo 1.0, Veo 180, Veo 2.0, Veo 200, Veo 250, Veo 3.0, Versa Pro</li></ul>
+	    <li>Atom 1.0, Atom 2.0, Atom 3.0, Atom 3.1, Datamask, F10, F11, Geo, Geo 2.0, OC1, OCS, OCi, Pro Plus 2, Pro Plus 2.1, Pro Plus 3, Pro Plus X, VT 4.1, VT Pro, VT3, VT4, VTX, Veo 1.0, Veo 180, Veo 2.0, Veo 200, Veo 250, Veo 3.0, Versa Pro</li></ul>
     </dd>
     <dt>Ratio</dt><dd><ul>
 	    <li>iDive Deep, iDive Easy, iDive Free, iDive Tech+, iX3M Deep, iX3M Easy, iX3M Pro Deep, iX3M Pro Easy, iX3M Pro Tech+, iX3M Reb, iX3M Tech+</li></ul>
@@ -63,7 +66,7 @@
 	    <li>XP5</li></ul>
     </dd>
     <dt>Shearwater</dt><dd><ul>
-	    <li>Nerd, Nerd 2, Perdix, Perdix AI, Petrel, Petrel 2, Predator</li></ul>
+	    <li>Nerd, Nerd 2, Perdix, Perdix AI, Petrel, Petrel 2, Predator, Teric</li></ul>
     </dd>
     <dt>Sherwood</dt><dd><ul>
 	    <li>Amphos, Amphos Air, Insight, Insight 2, Vision, Wisdom, Wisdom 2, Wisdom 3</li></ul>
